--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
 		"email": "martinadamek59@gmail.com",
 		"issues": "https://github.com/B4nan/translator/issues"
 	},
-	"minimum-stability": "stable",
+	"minimum-stability": "beta",
 	"require": {
-		"nette/utils": "2.3.*",
-		"nette/neon": "2.3.*",
-		"nette/caching": "2.3.*"
+		"nette/utils": "2.4.*",
+		"nette/neon": "2.4.*",
+		"nette/caching": "2.4.*"
 	},
 	"require-dev": {
 		"nette/tester": "@dev",
