--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
 	},
 	"minimum-stability": "beta",
 	"require": {
-		"nette/utils": "2.4.*",
-		"nette/neon": "2.4.*",
-		"nette/caching": "2.4.*"
+		"nette/utils": "^2.3",
+		"nette/neon": "^2.3",
+		"nette/caching": "^2.3"
 	},
 	"require-dev": {
 		"nette/tester": "@dev",
